# Aurorium

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: backup.rs  error.rs  errors.rs  extract.rs  main.rs  patch_info.rs  routes.rs  util.rs  utils.rs  xml_parser.rs
src/fetcher/: client.rs  compare.rs  fetcher.rs  mod.rs  structs.rs
src/http/: http_request.rs  mod.rs
src/models/: asset.rs  mod.rs  revision.rs
src/rate_limit/: rate_limiter.rs
src/revision/: checker.rs  fetcher.rs  mod.rs  xml_parser.rs
src/revision_checker/: checker.rs  mod.rs  revision.rs  revision_checker.rs
