[package]
name = "AuroriumRewrite"
version = "3.0.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.37", features = ["derive", "env"] }
futures-util = "0.3.31"
indicatif = "0.17.11"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io-util"] }
tower = { version = "0.5.2", features = ["buffer", "limit", "timeout"] }
