[package]
name = "aurorium"
version = "3.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive", "env"] }
eventsource-client = "0.15.0"
futures-util = "0.3.31"
indicatif = "0.18.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["io-util"] }
tower = { version = "0.5.2", features = ["buffer", "limit", "timeout"] }
