[package]
authors = ["Phill030"]
homepage = "https://phill030.de/projects/aurorium"
license-file = "LICENSE.md"
name = "aurorium"
version = "4.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
clap = { version = "4.5.45", features = ["derive", "env"] }
eventsource-client = "0.15.0"
futures-util = "0.3.31"
indicatif = "0.18.0"
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["json"] }
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["io-util"] }
tower = { version = "0.5.2", features = ["buffer", "limit", "timeout"] }
